# csv2notion

./: .pre-commit-config.yaml  .versionrc.js  CHANGELOG.md  README.md  csv2notion.spec  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_template.yml
.github/workflows/: release_brew.yml  release_github.yml  release_pypi.yml  test.yml
csv2notion/: __main__.py  cli.py  cli_args.py  cli_steps.py  csv_data.py  notion_convert.py  notion_convert_map.py  notion_convert_utils.py  notion_db.py  notion_db_client.py  notion_db_collection.py  notion_preparator.py  notion_row.py  notion_row_image_block.py  notion_row_upload_file.py  notion_type_guess.py  notion_uploader.py  notion_uploader_file.py  notion_uploader_image_block.py  utils.py  utils_db.py  utils_exceptions.py  utils_file.py  utils_rand_id.py  utils_static.py  utils_str.py  utils_threading.py
csv2notion/notion/: LICENSE  block.py  client.py  collection.py  logger.py  maps.py  markdown.py  monitor.py  smoke_test.py  space.py  store.py  user.py  utils.py
tests/: conftest.py  test_guess_type.py  test_notion_row.py  test_ops.py  test_ops_column_types.py  test_ops_column_types_file.py  test_ops_column_types_person.py  test_ops_column_types_status.py  test_ops_column_types_time.py  test_ops_custom_types.py  test_ops_custom_types_file.py  test_ops_custom_types_person.py  test_ops_custom_types_time.py  test_ops_default_icon.py  test_ops_fail_on_conversion_error.py  test_ops_fail_on_duplicate_csv_columns.py  test_ops_fail_on_duplicates.py  test_ops_fail_on_inaccessible_relations.py  test_ops_fail_on_relation_duplicates.py  test_ops_fail_on_unsettable_columns.py  test_ops_fail_on_unsupported_columns.py  test_ops_icon_column.py  test_ops_image_caption_column.py  test_ops_image_column.py  test_ops_mandatory_column.py  test_ops_merge.py  test_ops_merge_column_types_file.py  test_ops_merge_custom_types_file.py  test_ops_merge_icon_column.py  test_ops_merge_image_column.py  test_ops_missing_columns_action.py  test_ops_missing_relations_action.py  test_ops_relations.py
tests/cassettes/: test_bad_token.yaml  test_bad_url.yaml  test_bad_url_type.uuid4.json  test_bad_url_type.yaml  test_column_types_checkbox.uuid4.json  test_column_types_checkbox.yaml  test_column_types_created_time.uuid4.json  test_column_types_created_time.yaml  test_column_types_created_time_multi.uuid4.json  test_column_types_created_time_multi.yaml  test_column_types_date.uuid4.json  test_column_types_date.yaml  test_column_types_date_split.uuid4.json  test_column_types_date_split.yaml  test_column_types_file_banned.uuid4.json  test_column_types_file_banned.yaml  test_column_types_file_banned_fail.uuid4.json  test_column_types_file_banned_fail.yaml  test_column_types_file_duplicate.uuid4.json  test_column_types_file_duplicate.yaml  test_column_types_file_embed.uuid4.json  test_column_types_file_embed.yaml  test_column_types_file_empty.uuid4.json  test_column_types_file_empty.yaml  test_column_types_file_multi_column.uuid4.json  test_column_types_file_multi_column.yaml  test_column_types_file_not_found.uuid4.json  test_column_types_file_not_found.yaml  test_column_types_file_not_found_fail.uuid4.json  test_column_types_file_not_found_fail.yaml  test_column_types_file_upload.uuid4.json  test_column_types_file_upload.yaml  test_column_types_last_edited_time.uuid4.json  test_column_types_last_edited_time.yaml  test_column_types_last_edited_time_multi.uuid4.json  test_column_types_last_edited_time_multi.yaml  test_column_types_multi_select.uuid4.json  test_column_types_multi_select.yaml  test_column_types_multi_select_colored.uuid4.json  test_column_types_multi_select_colored.yaml  (+333 more)
tests/fixtures/: db_maker.py  db_maker_class.py  db_maker_notion_db.py  vcr_uuid4.py
